Update jobs page links
- Add style priority hint
- Update link redirects, from Vitamin Talent to Aquent Talent

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -2,7 +2,8 @@
 layout: wrapper-full-default
 permalink: /jobs/
 ---
-<link rel="stylesheet" href="{{ site.url }}/css/hub-pages.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="{{ site.url }}/css/hub-pages.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+
 <main id="main" role="main">
   <section id="about">
     <div class="banner-content container-fluid">
@@ -101,7 +102,7 @@ permalink: /jobs/
           <ul>
             <li>
               <h3>
-                <a href="https://vitamintalent.com/check-salary" target="_blank" rel="noopener">Check Salary</a>
+                <a href="https://aquenttalent.com/check-salary" target="_blank" rel="noopener">Check Salary</a>
               </h3>
             </li>
             <li>
@@ -133,7 +134,7 @@ permalink: /jobs/
           <ul>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/how-to-apply-online-and-actually-get-a-job">How to Apply Online (and Actually Get a Job)</a>
+              <a href="https://aquenttalent.com/blog/how-to-apply-online-and-actually-get-a-job" target="_blank" rel="noopener">How to Apply Online (and Actually Get a Job)</a>
             </h3>
             </li>
             <li>
@@ -162,7 +163,7 @@ permalink: /jobs/
           <ul>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/top-5-free-portfolio-sites" target="_blank" rel="noopener">Top 5 Free Portfolio Sites for Creatives</a>
+              <a href="https://aquenttalent.com/blog/top-5-free-portfolio-sites" target="_blank" rel="noopener">Top 5 Free Portfolio Sites for Creatives</a>
             </h3>
             </li>
           </ul>
@@ -184,27 +185,27 @@ permalink: /jobs/
           <ul>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/8-networking-techniques-for-meeting-people-face-to-face" target="_blank" rel="noopener">8 Networking Techniques for Meeting People Face-to-Face</a>
+              <a href="https://aquenttalent.com/blog/8-networking-techniques-for-meeting-people-face-to-face" target="_blank" rel="noopener">8 Networking Techniques for Meeting People Face-to-Face</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/are-you-making-the-most-of-linkedin-to-build-your-personal-brand" target="_blank" rel="noopener">Are You Making the Most of LinkedIn to Build Your Personal Brand?</a>
+              <a href="https://aquenttalent.com/blog/are-you-making-the-most-of-linkedin-to-build-your-personal-brand" target="_blank" rel="noopener">Are You Making the Most of LinkedIn to Build Your Personal Brand?</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/how-to-create-a-great-linkedin-profile-for-designers" target="_blank" rel="noopener">How to Create a Great LinkedIn Profile for Designers</a>
+              <a href="https://aquenttalent.com/blog/how-to-create-a-great-linkedin-profile-for-designers" target="_blank" rel="noopener">How to Create a Great LinkedIn Profile for Designers</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/linkedins-and-outs-get-noticed-and-find-opportunities" target="_blank" rel="noopener">LinkedIns & Outs: Get Noticed and Find Opportunities</a>
+              <a href="https://aquenttalent.com/blog/linkedins-and-outs-get-noticed-and-find-opportunities" target="_blank" rel="noopener">LinkedIns & Outs: Get Noticed and Find Opportunities</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/the-5-rules-of-personal-branding-and-how-to-use-them" target="_blank" rel="noopener">The 5 Rules of Personal Branding and How to Use Them</a>
+              <a href="https://aquenttalent.com/blog/the-5-rules-of-personal-branding-and-how-to-use-them" target="_blank" rel="noopener">The 5 Rules of Personal Branding and How to Use Them</a>
             </h3>
             </li>
           </ul>
@@ -233,27 +234,27 @@ permalink: /jobs/
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/52-favorite-interview-questions-from-top-design-leaders" target="_blank" rel="noopener">52 Favorite Interview Questions From Top Design Leaders</a>
+              <a href="https://aquenttalent.com/blog/52-favorite-interview-questions-from-top-design-leaders" target="_blank" rel="noopener">52 Favorite Interview Questions From Top Design Leaders</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/how-to-win-your-next-video-interview" target="_blank" rel="noopener">How to Win Your Next Video Interview</a>
+              <a href="https://aquenttalent.com/blog/how-to-win-your-next-video-interview" target="_blank" rel="noopener">How to Win Your Next Video Interview</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/interviewing-better-have-answers-to-these-7-questions" target="_blank" rel="noopener">Interviewing? Better Have Answers to These 7 Questions</a>
+              <a href="https://aquenttalent.com/blog/interviewing-better-have-answers-to-these-7-questions" target="_blank" rel="noopener">Interviewing? Better Have Answers to These 7 Questions</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/14-best-interview-questions-for-creatives" target="_blank" rel="noopener">14 Best Interview Questions for Creatives</a>
+              <a href="https://aquenttalent.com/blog/14-best-interview-questions-for-creatives" target="_blank" rel="noopener">14 Best Interview Questions for Creatives</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/top-10-must-ask-interview-questions-for-designers" target="_blank" rel="noopener">Top 10 Must-Ask Interview Questions for Designers</a>
+              <a href="https://aquenttalent.com/blog/top-10-must-ask-interview-questions-for-designers" target="_blank" rel="noopener">Top 10 Must-Ask Interview Questions for Designers</a>
             </h3>
             </li>
           </ul>
@@ -327,7 +328,7 @@ permalink: /jobs/
           <ul>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/how-to-create-a-ux-profile-that-will-help-you-land-your-dream-job" target="_blank" rel="noopener">How to Create a UX Profile That Will Help You Land Your Dream Job</a>
+              <a href="https://aquenttalent.com/blog/how-to-create-a-ux-profile-that-will-help-you-land-your-dream-job" target="_blank" rel="noopener">How to Create a UX Profile That Will Help You Land Your Dream Job</a>
             </h3>
             </li>
             <li>
@@ -352,17 +353,17 @@ permalink: /jobs/
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/how-to-navigate-the-7-stages-of-your-design-career" target="_blank" rel="noopener">How to Navigate the 7 Stages of Your Design Career</a>
+              <a href="https://aquenttalent.com/blog/how-to-navigate-the-7-stages-of-your-design-career" target="_blank" rel="noopener">How to Navigate the 7 Stages of Your Design Career</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/the-5-critical-skills-you-need-to-advance-in-ux" target="_blank" rel="noopener">The 5 Critical Skills You Need to Advance in UX</a>
+              <a href="https://aquenttalent.com/blog/the-5-critical-skills-you-need-to-advance-in-ux" target="_blank" rel="noopener">The 5 Critical Skills You Need to Advance in UX</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/advice-for-planning-your-next-career-move-in-ux" target="_blank" rel="noopener">Advice for Planning Your Next Career Move in UX</a>
+              <a href="https://aquenttalent.com/blog/advice-for-planning-your-next-career-move-in-ux" target="_blank" rel="noopener">Advice for Planning Your Next Career Move in UX</a>
             </h3>
             </li>
           </ul>
@@ -396,7 +397,7 @@ permalink: /jobs/
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/7-non-technical-skills-your-creative-candidates-should-have" target="_blank" rel="noopener">7 Non-Technical Skills Your Creative Candidates Should Have</a>
+              <a href="https://aquenttalent.com/blog/7-non-technical-skills-your-creative-candidates-should-have" target="_blank" rel="noopener">7 Non-Technical Skills Your Creative Candidates Should Have</a>
             </h3>
             </li>
             <li>
@@ -425,22 +426,22 @@ permalink: /jobs/
           <ul>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/how-to-fix-your-talent-pipeline-to-be-more-inclusive" target="_blank" rel="noopener">How to Fix Your Talent Pipeline to Be More Inclusive</a>
+              <a href="https://aquenttalent.com/blog/how-to-fix-your-talent-pipeline-to-be-more-inclusive" target="_blank" rel="noopener">How to Fix Your Talent Pipeline to Be More Inclusive</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/unlocking-creativity-through-diversity" target="_blank" rel="noopener">Unlocking Creativity Through Diversity</a>
+              <a href="https://aquenttalent.com/blog/unlocking-creativity-through-diversity" target="_blank" rel="noopener">Unlocking Creativity Through Diversity</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/unpacking-the-hiring-process-questions-you-can-ask-to-identify-bias" target="_blank" rel="noopener">Unpacking the Hiring Process: Questions You Can Ask to Identify Bias</a>
+              <a href="https://aquenttalent.com/blog/unpacking-the-hiring-process-questions-you-can-ask-to-identify-bias" target="_blank" rel="noopener">Unpacking the Hiring Process: Questions You Can Ask to Identify Bias</a>
             </h3>
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/how-addressing-our-diversity-challenges-inspired-our-diversity-recruiting-solution" target="_blank" rel="noopener">How Addressing Our Diversity Challenges Inspired Our Diversity Recruiting Solution</a>
+              <a href="https://aquenttalent.com/blog/how-addressing-our-diversity-challenges-inspired-our-diversity-recruiting-solution" target="_blank" rel="noopener">How Addressing Our Diversity Challenges Inspired Our Diversity Recruiting Solution</a>
             </h3>
             </li>
             <li>
