Address some broken links
See https://github.com/gymnasium/tracker/issues/308

--- a/hub-pages/accessibility/index.html
+++ b/hub-pages/accessibility/index.html
@@ -319,12 +319,12 @@ permalink: /accessibility/
             <div class="section-content">
               <header>
                 <h2 class="all-caps">Accessibility Services</h2>
-                <p>People, projects, and training that deliver truly inclusive experiences from <a href="https://aquent.com/services/digital-accessibility" target="_blank" rel="noopener">Aquent</a>.</p>
+                <p>People, projects, and training that deliver truly inclusive experiences from <a href="https://aquent.com/brands/digital-accessibility" target="_blank" rel="noopener">Aquent</a>.</p>
               </header>
               <div class="list-hr">
                 <ul>
                   <li>
-                    <h3><a href="https://aquent.com/services/studio-services" target="_blank" rel="noopener">Projects</a></h3>
+                    <h3><a href="https://aquentstudios.com/" target="_blank" rel="noopener">Projects</a></h3>
                     <p>If you’re looking to outsource accessibility projects, Aquent Studios can assemble and lead a team of accessibility experts and specialists in design, development, experience, and content to achieve your goals.</p>
                   </li>
                   <li>
@@ -336,7 +336,7 @@ permalink: /accessibility/
                     <p>Upskill your team on the latest A11Y best practices for design and development from quick <a href="https://thegymnasium.com/courses">online courses</a> to full-day workshops.</p>
                   </li>
                   <li>
-                    <h3><a href="https://aquent.com/services/direct-hire" target="_blank" rel="noopener">Direct Hire</a></h3>
+                    <h3><a href="https://aquenttalent.com/services/permanent" target="_blank" rel="noopener">Direct Hire</a></h3>
                     <p>When you’re looking to make a strategic hire, we’ll conduct a personalized, comprehensive search and identify the right accessibility expert to help assess, develop, and deliver inclusive experiences.</p>
                   </li>
                 </ul>
