--- a/static-pages/social-impact/index.html
+++ b/static-pages/social-impact/index.html
@@ -65,7 +65,7 @@ permalink: /social-impact/
         <h3>Women in Tech</h3>
         <ul>
           <li><a href="https://girlswhocode.com">Girls Who Code</a></li>
-          <li><a href="https://www.blackgirlscode.com">Black Girls Code</a></li>
+          <li><a href="https://wearebgc.org">Black Girls Code</a></li>
         </ul>
       </section>
 
