Update social impact page
- Update link redirect

--- a/static-pages/social-impact/index.html
+++ b/static-pages/social-impact/index.html
@@ -30,7 +30,7 @@ permalink: /social-impact/
         <h3>Aquent Social Impact</h3>
         <ul>
           <li><a href="https://designingforgood.com">Designing for Good</a></li>
-          <li><a href="https://aquent.com/diversity-plus">Diversity+ Recruiting Solution</a></li>
+          <li><a href=" https://aquenttalent.com/services/diversity-recruiting">Diversity+ Recruiting Solution</a></li>
           <li><a href="https://aquent.com/about-us/sustainability">Global Sustainability Efforts</a></li>
         </ul>
       </section>
