Update accessibility collection content
- Update services section language and content
- Remove duplicate inline link

--- a/hub-pages/accessibility/index.html
+++ b/hub-pages/accessibility/index.html
@@ -298,25 +298,21 @@ permalink: /accessibility/
             <div class="section-content">
               <header>
                 <h2 class="all-caps">Accessibility Services</h2>
-                <p>People, projects, and training that deliver truly inclusive experiences from <a href="https://aquent.com/brands/digital-accessibility" target="_blank" rel="noopener">Aquent</a>.</p>
+                <p>Explore people, projects, and training that deliver truly inclusive experiences from <a href="https://aquent.com/brands/digital-accessibility" target="_blank" rel="noopener">Aquent</a>.</p>
               </header>
               <div class="list-hr">
                 <ul>
+                  <li>
+                    <h3><a href="https://aquenttalent.com/services/talent-recruiting" target="_blank" rel="noopener">Staffing</a></h3>
+                    <p>Finding people with deep knowledge of accessibility can be like finding a needle in a haystack. Luckily, we know where to look. Our experienced recruiters and vast talent pool mean you can complete accessibility projects and bring in specialized skill sets when you need them.</p>
+                  </li>
                   <li>
                     <h3><a href="https://aquent.com/brands/aquent-studios" target="_blank" rel="noopener">Projects</a></h3>
                     <p>If you’re looking to outsource accessibility projects, Aquent Studios can assemble and lead a team of accessibility experts and specialists in design, development, experience, and content to achieve your goals.</p>
                   </li>
                   <li>
-                    <h3><a href="https://aquent.com/brands/aquent-talent" target="_blank" rel="noopener">Staffing</a></h3>
-                    <p>Finding people with deep knowledge of accessibility can be like finding a needle in a haystack. Luckily, we know where to look. Our experienced recruiters and vast talent pool mean you can complete accessibility projects and bring in specialized skill sets when you need them.</p>
-                  </li>
-                  <li>
                     <h3><a href="https://thegymnasium.com/courses">Professional Development</a></h3>
-                    <p>Upskill your team on the latest A11Y best practices for design and development from quick <a href="https://thegymnasium.com/courses">online courses</a> to full-day workshops.</p>
-                  </li>
-                  <li>
-                    <h3><a href="https://aquenttalent.com/services/permanent" target="_blank" rel="noopener">Direct Hire</a></h3>
-                    <p>When you’re looking to make a strategic hire, we’ll conduct a personalized, comprehensive search and identify the right accessibility expert to help assess, develop, and deliver inclusive experiences.</p>
+                    <p>Upskill your team on the latest A11Y best practices for design and development from quick online courses to full-day workshops.</p>
                   </li>
                 </ul>
               </div>
