--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -100,7 +100,7 @@ permalink: /courses/take5/
               <article class="tutorial">
                 <div class="artwork" data-duration="{{ featured_video_duration }}">
                   <a href="{{ featured_url }}" title="Watch Video">
-                    <img alt="{{ featured_description }}" src="{{ site.url }}{{ featured_poster_art }}?{{ site.time | date:'%s' }}" width="1280" height="720" decoding="async" fetchpriority="high" loading="eager">
+                    <img alt="{{ featured_description }}" src="{{ site.url }}{{ featured_poster_art }}?{{ site.time | date:'%s' }}" width="1280" height="720" decoding="async" fetchpriority="high">
                   </a>
                 </div>
                 <header>
