--- a/holiday-card/index.html
+++ b/holiday-card/index.html
@@ -9,4 +9,5 @@ permalink: /holiday-card/
 <ul>
   <li><a href="2022">2022</a></li>
   <li><a href="2021">2021</a></li>
+  <li><a href="2020">2020</a></li>
 </ul>
