--- a/holiday-card/index.html
+++ b/holiday-card/index.html
@@ -7,7 +7,7 @@ permalink: /holiday-card/
   <p>Season's greetings from Aquent Gymnasium.</p>
 </header>
 <ul>
-  <li><a href="2022">2022</a></li>
-  <li><a href="2021">2021</a></li>
-  <li><a href="2020">2020</a></li>
+  <li><a href="{{site.url}}/holiday-card/2022">2022</a></li>
+  <li><a href="{{site.url}}/holiday-card/2021">2021</a></li>
+  <li><a href="{{site.url}}/holiday-card/2020">2020</a></li>
 </ul>
