--- a/holiday-card/happy-new-year/index.html
+++ b/holiday-card/happy-new-year/index.html
@@ -1,9 +1,29 @@
 ---
-layout: wrapper-full-white
+layout: wrapper-75-25
 permalink: /happy-new-year/
 ---
 <header>
   <h1>Happy New Year</h1>
-  <p>Season's greetings from Aquent Gymnasium.</p>
+  <p><b>Season’s greetings from Aquent Gymnasium.</b></p>
+  <p>We’re sharing a playlist to kick off the new year. (And a few festive <a href="#links">links</a>.) We wish you a wonderful year ahead filled with good vibes. And thank you for helping to make Gymnasium great.</p>
 </header>
 
+<main id="main">
+
+  <h2>A Holiday-esque Playlist</h2>
+
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe title="Gymnasium New Year Playlist" src="https://www.youtube.com/embed/VT2_7aq3ytE" title="YouTube video player" width="560" height="315" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+  <section id="links">
+    <h2>A Few Festive Links</h2>
+    <p>In case it’s a silent night.</p>
+    <ul>
+      <li><a href="https://www.supremo.co.uk/foney-fonts-christmas/" rel="noopener" target="_blank">Foney Fonts: Guess the Brand Logo Quiz</a></li>
+      <li><a href="#" rel="noopener" target="_blank">TK</a></li>
+      <li><a href="#" rel="noopener" target="_blank">TK</a></li>
+    </ul>
+  </section>
+
+</main>
