Streamline CSS meta generation for localhost

--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -1,10 +1,8 @@
 ---
 layout: wrapper-full-default
 permalink: /collections/
-
+css: [/css/hub-pages.css]
 ---
-<link rel="stylesheet" href="{{ site.url }}/css/hub-pages.css?{{ site.time | date:'%s' }}" fetchpriority="hight">
-
 <main id="main" role="main">
   <header class="collections--about" id="about">
     <div class="container">
