--- a/static-pages/privacy-policy/index.html
+++ b/static-pages/privacy-policy/index.html
@@ -1,10 +1,8 @@
 ---
 layout: wrapper-full-white
 permalink: /privacy-policy/
+css: [/css/privacy-policy.css]
 ---
-
-<link rel="stylesheet" href="{{ site.url }}/css/privacy-policy.css">
-
 <main class="privacy-policy" id="main">
 
 <nav>
