--- a/take5/catalog-blitz.html
+++ b/take5/catalog-blitz.html
@@ -1,6 +1,7 @@
 ---
 layout: wrapper-full-default
 permalink: /take5/blitz
+css: [/css/take5.css]
 ---
 {%- comment -%}
 //
@@ -9,8 +10,6 @@ permalink: /take5/blitz
 {%- endcomment -%}
 
 {% assign base_path = "/courses/take5/" | prepend: site.gymurl %}
-
-<link rel="stylesheet" href="{{ site.url }}/css/take5.css">
 
 {%- include take5/detail-opener-js.html -%}
 
