--- a/take5/catalog-debug.html
+++ b/take5/catalog-debug.html
@@ -1,6 +1,7 @@
 ---
 layout: wrapper-full-default
 permalink: /take5/debug
+css: [/css/take5.css]
 ---
 
 {%- comment -%}
@@ -9,7 +10,6 @@ permalink: /take5/debug
 //
 {%- endcomment -%}
 
-<link rel="stylesheet" href="https://thegymcms.com/css/take-5.css">
 <main id="main" role="main">
 <h1 class="title all-caps">Take 5 Catalog Page</h1>
 
