--- a/hub-pages/design-systems/index.html
+++ b/hub-pages/design-systems/index.html
@@ -1,9 +1,8 @@
 ---
 layout: wrapper-full-default
 permalink: /design-systems/
+css: [/css/hub-pages.css]
 ---
-<link rel="stylesheet" href="{{ site.url }}/css/hub-pages.css?{{ site.time | date:'%s' }}" fetchpriority="high">
-
 <main class="design-systems" id="main" role="main">
   <section id="about">
     <div class="banner-content container-fluid">
