--- a/hub-pages/remote-work/index.html
+++ b/hub-pages/remote-work/index.html
@@ -1,9 +1,8 @@
 ---
 layout: wrapper-full-default
 permalink: /remote-work/
+css: [/css/hub-pages.css]
 ---
-<link rel="stylesheet" href="{{ site.url }}/css/hub-pages.css?{{ site.time | date:'%s' }}" fetchpriority="high">
-
 <main id="main" role="main">
   <section id="about">
     <div class="banner-content container-fluid">
