Update holiday card related pages
- Update (educate) punctuation
- Update new year video ID (to actual playlist)
- Remove duplicate iframe title attribute (copy-paste goodness)

--- a/holiday-card/index.html
+++ b/holiday-card/index.html
@@ -4,7 +4,7 @@ permalink: /holiday-card/
 ---
 <header>
   <h1>Holiday Cards</h1>
-  <p>Season's greetings from Aquent Gymnasium.</p>
+  <p>Season’s greetings from Aquent Gymnasium.</p>
 </header>
 <ul>
   <li><a href="{{site.gymurl}}/holiday-card/2022">2022</a></li>
