Update new year page
- Update video embed (stop breaking it)

--- a/holiday-card/happy-new-year/index.html
+++ b/holiday-card/happy-new-year/index.html
@@ -13,7 +13,7 @@ permalink: /happy-new-year/
   <h2>A Holiday-esque Playlist</h2>
 
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe title="Gymnasium’s Happy Holidays 2022 Playlist" src="https:/youtube.com/embed/videoseries?list=PL0Y6L6nQtNzciTn4uPGhI-TX1Z0WRfgDj" width="560" height="315" frameborder="0" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+    <iframe title="Gymnasium’s Happy Holidays 2022 Playlist" src="https://www.youtube-nocookie.com/embed/videoseries?list=PL0Y6L6nQtNzciTn4uPGhI-TX1Z0WRfgDj" width="560" height="315" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
 </main>
