Update collections landing page
- Update path to style sheet

--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -1,7 +1,7 @@
 ---
 layout: wrapper-full-default
 permalink: /collections/
-css: [/css/hub-pages.css]
+css: [/css/collections.css]
 ---
 <main id="main" role="main">
   <header class="collections--about" id="about">
