--- a/static-pages/privacy-policy/index.html
+++ b/static-pages/privacy-policy/index.html
@@ -32,7 +32,7 @@ css: [/css/privacy-policy.css]
   <p>Aquent is committed to safeguarding your privacy and your rights related to the personal data we collect. In general, Aquent’s privacy practices comply with local laws and regulations and our privacy practices in different countries may vary to reflect local requirements. This website is not intended for children under 16 and we do not knowingly collect data relating to children. Please review this privacy notice to understand how we collect, use, share and protect your personal data.
   <p><strong>This Aquent Privacy Notice applies to:</strong></p>
   <ul>
-    <li>The following websites: Aquent.com, myaquent.com, thegymnasium.com, aquenttalent.com, aquentstudios.com, robohead.net, majortom.net, and other websites linking to this notice (the “Aquent Websites”)</li>
+    <li>The following websites: Aquent.com, myaquent.com, thegymnasium.com, vitamintalent.com, aquentstudios.com, robohead.net, majortom.net, and other websites linking to this notice (the “Aquent Websites”)</li>
     <li>all individuals who provide personal data, such as clients, applicants, employees, business partners, registered users of Aquent Gymnasium, Users of the Aquent Websites and others;</li>
     <li>all locations where Aquent operates, even where local regulations do not exist; and</li>
     <li>all methods of contact, including in person, written, via the internet, direct mail, telephone or facsimile.</li>
