Update Jobs page content
- Update short description text
- Update featured job search text
- Update featured tutorials heading
- Update tutorials section CTA text

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -9,7 +9,7 @@ css: [/css/hub-pages.css]
       <div class="container">
         <header>
           <h1>Jobs</h1>
-          <p>Design a career you love with free resources for creative professionals — from in-depth <a href="#resume-tips"><b>articles</b></a> and 5-minute <a href="#take5-tutorials"><b>tutorials</b></a> to contract and full-time <a href="#jobs"><b>job opportunities</b></a>.</p>
+          <p>Explore our free resources for creative pros — from in-depth <a href="#resume-tips"><b>articles</b></a> and 5-minute <a href="#take5-tutorials"><b>tutorials</b></a> to contract and full-time <a href="#jobs"><b>jobs</b></a>.</p>
         </header>
         <div class="cols cols-max-3" id="featured">
           <ul>
@@ -36,7 +36,7 @@ css: [/css/hub-pages.css]
                 <div class="card-content featured">
                   <div class="card-main no-subhead equal-h">
                     <header class="full-width">
-                      <h2 class="all-caps">Job Opportunities</h2>
+                      <h2 class="all-caps">Job Search</h2>
                     </header>
                     <figure class="full-width">
                       <img alt="Find work with Aquent in over 35 offices around the globe." src="{{ site.url }}/img/jobs/featured/find-work.jpg" width="1280" height="720" decoding="async">
@@ -44,7 +44,7 @@ css: [/css/hub-pages.css]
                     <h3 class="all-caps" hidden>Find Contract and Full-Time Work</h3>
                   </div>
                   <div class="card-cta card-cta-button">
-                    <a class="gym-button" href="#jobs"><b>Find Work</b></a>
+                    <a class="gym-button" href="#jobs"><b>Explore Jobs</b></a>
                   </div>
                 </div>
               </article>
@@ -54,7 +54,7 @@ css: [/css/hub-pages.css]
                 <div class="card-content featured">
                   <div class="card-main no-subhead equal-h">
                     <header class="full-width">
-                      <h2 class="all-caps">Take 5 Tutorials</h2>
+                      <h2 class="all-caps">Tutorials</h2>
                     </header>
                     <figure class="full-width">
                       <img alt="Tell your story in a compelling way to advance your career and salary." src="{{ site.url }}/img/take5/posters/gym-5016.jpg" width="1280" height="720" decoding="async">
@@ -306,7 +306,7 @@ css: [/css/hub-pages.css]
           </ul>
         </div>
         <div class="cta">
-          <a class="gym-button" href="https://thegymnasium.com/courses/take5"><b>View More Take 5 Tutorials</b></a>
+          <a class="gym-button" href="https://thegymnasium.com/courses/take5"><b>View More Tutorials</b></a>
         </div>
       </div>
       <div class="to-top-link">
