--- a/hub-pages/remote-work/index.html
+++ b/hub-pages/remote-work/index.html
@@ -119,13 +119,13 @@ css: [/css/hub-pages.css]
             </li>
             <li>
               <h3>
-                <a href="https://brand.aquent.com/salary-guide?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_slg23&utm_content=salary_benefits" target="_blank" rel="noopener">US Salary Guide</a>
+                <a href="https://brand.aquent.com/salary-guide?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_slg23&utm_content=remote-work-resources" target="_blank" rel="noopener">US Salary Guide</a>
               </h3>
               <p>A free downloadable PDF guide to the latest salary benchmarks in the US.</p>
             </li>
             <li>
               <h3>
-                <a href="https://brand.aquent.com/UK-salary-guide?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_UK_salary-guide&utm_content=2023" target="_blank" rel="noopener">UK Salary Guide</a>
+                <a href="https://brand.aquent.com/UK-salary-guide?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_UK_slg23&utm_content=slg23" target="_blank" rel="noopener">UK Salary Guide</a>
               </h3>
               <p>A free downloadable PDF guide to the latest salary benchmarks in the UK.</p>
             </li>
