--- a/jobs/index.html
+++ b/jobs/index.html
@@ -78,7 +78,7 @@ css: [/css/hub-pages.css]
     <section class="section" id="jobs">
       <div class="section-content">
         <header>
-          <h2 class="all-caps">Remote Jobs</h2>
+          <h2 class="all-caps">Jobs</h2>
           <hr>
         </header>
         {%- comment -%} Get our jobs module {%- endcomment -%}
