Update Take 5 catalog
- Add external CSS to front matter and metadata
- Remove external CSS from body

--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -1,6 +1,7 @@
 ---
 layout: wrapper-full-default
 permalink: /courses/take5/
+css: [/css/take5.css]
 ---
 {%- assign base_path = "/courses/take5/" | prepend: site.gymurl -%}
 
