--- a/static-pages/social-impact/index.html
+++ b/static-pages/social-impact/index.html
@@ -4,18 +4,20 @@ permalink: /social-impact/
 css: [/css/static-main-content.css]
 ---
 <!-- Temporary HTML for style hooks -->
-<div class="main-content-static">
+<main class="main-content-static" id="main">
 
   <h1>Social Impact</h1>
 
   <p class="hero-text">We at Gymnasium believe that diversity is a feature, not a bug. Please join us in supporting causes we care about — from working toward closing the gender gap in tech to connecting marginalized communities with job opportunities. Together we can make a difference.</p>
 
+{%- comment -%}
   <article id="support-now">
   <h2>Support Now</h2>
   <a href="https://my.care.org/site/Donation2?31667.donation=form1&df_id=31667&mfc_pref=T&s_src=382248000000&s_subsrc=FY22UkraineCrisisFundMGAquent&utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-ukraine-relief&utm_content=social-impact"><img alt="Ukraine Relief Fund" src="{{ site.url }}/img/static-pages/social-impact/support-now/ukraine-crisis-fund.jpg" width="800" height="450"></a>
   <h3>Ukraine Relief</h3>
   <p>Join us in supporting the <a href="https://my.care.org/site/Donation2?31667.donation=form1&df_id=31667&mfc_pref=T&s_src=382248000000&s_subsrc=FY22UkraineCrisisFundMGAquent&utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-ukraine-relief&utm_content=social-impact">CARE Ukraine Crisis Fund</a>. We’re donating $100,000 through matching funds and contributions. Funds raised are going toward providing food, water, and aid directly to those in need. Together we can make a difference. <a href="https://my.care.org/site/Donation2?31667.donation=form1&df_id=31667&mfc_pref=T&s_src=382248000000&s_subsrc=FY22UkraineCrisisFundMGAquent&utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-ukraine-relief&utm_content=social-impact">Donate Now</a></p>
   </article>
+{%- endcomment -%}
 
   <article id="causes-we-care-about">
 
@@ -26,6 +28,7 @@ css: [/css/static-main-content.css]
       <section id="aquent-social-impact">
         <h3>Aquent Social Impact</h3>
         <ul>
+          <li><a href="https://my.care.org/site/Donation2?31667.donation=form1&df_id=31667&mfc_pref=T&s_src=382248000000&s_subsrc=FY22UkraineCrisisFundMGAquent">CARE Ukraine Crisis Fund</a>
           <li><a href="https://designingforgood.com">Designing for Good</a></li>
           <li><a href="https://aquenttalent.com/services/diversity-recruiting">Diversity+ Recruiting Solution</a></li>
           <li><a href="https://aquent.com/about-us/sustainability">Global Sustainability Efforts</a></li>
@@ -88,6 +91,6 @@ css: [/css/static-main-content.css]
 
   </article>
 
-</div><!-- .main-content-static -->
+</main><!-- .main-content-static -->
 
 <!-- / Temporary HTML for style hooks -->
